--- a/contacts.html
+++ b/contacts.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/contact.css">
-    <link rel="stylesheet" href="./css/header-footer.css">
+    <link rel="stylesheet" href="./contact.css">
+    <link rel="stylesheet" href="./header-footer.css">
     <title>Document</title>
 </head>
 <body>
@@ -82,8 +82,8 @@
    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp" type="text/javascript"></script>
     <script src="icon_customImage.js" type="text/javascript"></script>
 
-   <script src="./js/header.js"></script>
-   <script src="./js/footer.js"></script>
-   <script src="./js/map.js"></script>
+   <script src="./header.js"></script>
+   <script src="./footer.js"></script>
+   <script src="./map.js"></script>
 </body>
 </html>
